[gd_scene load_steps=10 format=3 uid="uid://554oaub4mgf2"]

[ext_resource type="Script" path="res://3D/Object/object.gd" id="1_3mj55"]
[ext_resource type="PackedScene" uid="uid://bym22d7ka3jlh" path="res://3D/Interaction/interactable.tscn" id="1_yxfdl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ofp4y"]
rough = true

[sub_resource type="BoxShape3D" id="BoxShape3D_ef7xh"]

[sub_resource type="BoxMesh" id="BoxMesh_g2nkk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mje8r"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_58wu5"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1hufy"]
shading_mode = 0
albedo_color = Color(0, 1, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_b0cg1"]
material = SubResource("StandardMaterial3D_1hufy")

[node name="Object" type="RigidBody3D"]
collision_layer = 4
collision_mask = 6
mass = 0.001
physics_material_override = SubResource("PhysicsMaterial_ofp4y")
script = ExtResource("1_3mj55")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.1, 0)
shape = SubResource("BoxShape3D_ef7xh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
mesh = SubResource("BoxMesh_g2nkk")
surface_material_override/0 = SubResource("StandardMaterial3D_mje8r")

[node name="Interactable" parent="." instance=ExtResource("1_yxfdl")]
collision_mask = 0

[node name="CollisionShape3D" parent="Interactable" index="0"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("BoxShape3D_58wu5")

[node name="Highlight" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
visible = false
mesh = SubResource("QuadMesh_b0cg1")

[connection signal="focused" from="Interactable" to="." method="_on_interactable_focused"]
[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="unfocused" from="Interactable" to="." method="_on_interactable_unfocused"]

[editable path="Interactable"]
